deploy/k8s/base/discovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      labels:
        app: discovery
    spec:
      containers:
        - name: discovery
          image: ghcr.io/noeljackson/stocks:dev
          command: ["/discovery"]
          resources:
            requests: { cpu: 10m, memory: 32Mi }
            limits: { memory: 96Mi }
