deploy/k8s/base/evaluator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluator
  template:
    metadata:
      labels:
        app: evaluator
    spec:
      containers:
        - name: evaluator
          image: ghcr.io/noeljackson/stocks:dev
          command: ["/evaluator"]
          resources:
            requests: { cpu: 10m, memory: 32Mi }
            limits: { memory: 96Mi }
