deploy/k8s/base/goalpost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goalpost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goalpost
  template:
    metadata:
      labels:
        app: goalpost
    spec:
      containers:
        - name: goalpost
          image: ghcr.io/noeljackson/stocks:dev
          command: ["/goalpost"]
          resources:
            requests: { cpu: 25m, memory: 32Mi }
            limits: { memory: 128Mi }
