deploy/k8s/base/price-alerts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-alerts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-alerts
  template:
    metadata:
      labels:
        app: price-alerts
    spec:
      containers:
        - name: price-alerts
          image: ghcr.io/noeljackson/stocks:dev
          command: ["/price-alerts"]
          resources:
            requests: { cpu: 10m, memory: 32Mi }
            limits: { memory: 96Mi }
