deploy/k8s/base/reflection.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reflection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reflection
  template:
    metadata:
      labels:
        app: reflection
    spec:
      containers:
        - name: reflection
          image: ghcr.io/noeljackson/stocks:dev
          command: ["/reflection"]
          resources:
            requests: { cpu: 10m, memory: 32Mi }
            limits: { memory: 96Mi }
