deploy/k8s/base/router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      containers:
        - name: router
          image: ghcr.io/noeljackson/stocks:dev
          command: ["/router"]
          resources:
            requests: { cpu: 25m, memory: 32Mi }
            limits: { memory: 128Mi }
