deploy/k8s/base/staler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staler
  template:
    metadata:
      labels:
        app: staler
    spec:
      containers:
        - name: staler
          image: ghcr.io/noeljackson/stocks:dev
          command: ["/staler"]
          resources:
            requests: { cpu: 10m, memory: 32Mi }
            limits: { memory: 64Mi }
